--- a/Lab/lab4/Makefile
+++ b/Lab/lab4/Makefile
@@ -22,5 +22,5 @@ yakc.s:		yakc.c yakk.h
 		c86 -g yakc.i yakc.s
 
 clean:
-		rm lab4b.bin lab4.lst lab4bfinal.s myinth.s myinth.i \
+		rm lab4b.bin lab4b.lst lab4bfinal.s myinth.s myinth.i \
 		yakc.s yakc.i lab4b_app.s lab4b_app.i
