lab 5 done and compressed to pass off on monday

--- a/Lab/lab5/Makefile
+++ b/Lab/lab5/Makefile
@@ -4,16 +4,16 @@
 lab5.bin:	lab5final.s
 		nasm lab5final.s -o lab5.bin -l lab5.lst
 
-lab5final.s:	clib.s myisr.s myinth.s yaks.s lab5_app.s yakc.s
-		cat clib.s myisr.s myinth.s yakc.s yaks.s lab5_app.s > lab5final.s
+lab5final.s:	clib.s myisr.s myinth.s yaks.s lab5app.s yakc.s
+		cat clib.s myisr.s myinth.s yakc.s yaks.s lab5app.s > lab5final.s
 
 myinth.s:	myinth.c
 		cpp myinth.c myinth.i
 		c86 myinth.i myinth.s
 
-lab5_app.s:	lab5_app.c yakk.h clib.h
-		cpp lab5_app.c lab5_app.i
-		c86 lab5_app.i lab5_app.s
+lab5app.s:	lab5app.c yakk.h clib.h
+		cpp lab5app.c lab5app.i
+		c86 lab5app.i lab5app.s
 
 yakc.s:		yakc.c yakk.h
 		cpp yakc.c yakc.i
@@ -21,4 +21,4 @@ yakc.s:		yakc.c yakk.h
 
 clean:
 		rm lab5.bin lab5.lst lab5final.s myinth.s myinth.i \
-		yakc.s yakc.i lab5_app.s lab5_app.i
+		yakc.s yakc.i lab5app.s lab5app.i
